added LPRC to electronics

--- a/docs/.obsidian/workspace
+++ b/docs/.obsidian/workspace
@@ -91,10 +91,14 @@
   "active": "3729acc414639de5",
   "lastOpenFiles": [
     "Electronics/Analog electronics/Chapter 1.md",
-    "Electronics/Analog electronics/Chapter 3.md",
+    "Electronics/Analog electronics/Resources/C1_DIFFIO.webp",
+    "Electronics/Analog electronics/Resources/C1_HPRCTILT.PNG",
+    "Electronics/Analog electronics/Resources/C1_HPRCSTEP.jpg",
+    "Electronics/Analog electronics/Resources/C1_HPRCFR.png",
+    "Electronics/Analog electronics/Resources/C1_HPRC.png",
     "Electronics/index.md",
-    "Electronics/Analog electronics/index.md",
     "intro.md",
-    "Electronics/Analog electronics/Resources/C1_HPRC.png"
+    "Electronics/Analog electronics/Chapter 3.md",
+    "Electronics/Analog electronics/index.md"
   ]
 }
