Content : electronics biasing

--- a/docs/.obsidian/workspace
+++ b/docs/.obsidian/workspace
@@ -53,7 +53,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
   "right": {
     "id": "bea9ecdd9c9a40c9",
